feat: playlist & song APIs
